[X11] Drag & drop a file from desktop to Firefox for Linux is broken
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
People
(Reporter: mike, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(6 files, 1 obsolete file)
|
99.61 KB,
text/plain
|
Details | |
|
96.86 KB,
text/plain
|
Details | |
|
45.61 KB,
text/plain
|
Details | |
|
270.16 KB,
text/plain
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr128+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:129.0) Gecko/20100101 Firefox/129.0
Steps to reproduce:
There is a bug in Firefox for Linux v129.0.1 running on the LXQt desktop when dragging & dropping a file from the desktop to the browser.
Steps to reproduce the error:
I spun up a new VM and installed a clean Debian 12 Bookworm + MATE desktop. This includes Firefox v115.14.0esr.
Tested drag & drop and it works fine.
Removed the firefox-esr package using apt. Also deleted the /home/user/.mozilla directory.
Installed the Firefox .DEB Package for Debian per the instructions at Mozilla Support.
This installs Firefox v129.0.1
Tested drag & drop and it works fine with the MATE desktop.
Install LXQt with LightDM as the default display manager (this is the MATE default display manager).
Tested drag & drop - broken using LXQt desktop.
Changed the window manager from the LXQt default of xfwm4 to openbox.
No change, still broken so the bug is with Firefox v129.0.1 running on LXQt.
Actual results:
Drag & drop is broken. File is not copied from the desktop or file manager to the web app in Firefox when dragging & dropping.
Expected results:
File should be copied to browser.
Comment 1•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Assignee | ||
Comment 2•1 year ago
|
||
So it affects LXQt / xfwm4 /openbox only, right?
Thanks.
| Reporter | ||
Comment 3•1 year ago
|
||
I only tested with two desktop environments - LXQt, which I use daily, and MATE. I did not try any other desktops.
Updated•1 year ago
|
Comment 4•1 year ago
|
||
I'm using KDE 5 (X11) and it's broken there, too. So it looks like there might be an issue with Qt-based desktops?
Comment 5•1 year ago
|
||
I have similar experience with the file manager of LXQt - pcmanfm-qt rather than the desktop of LXQt which is also managed by the file manager AFAIK about LXQt so I think they are the same issue. I have recently tested other file managers - caja, dolphin, nautilus, pcmanfm(gtk3), dolphin, krusader, and they all worked, dolphin and krusader are also Qt based but do not have the same issue. lxqt-archiver in the same project binding to libfm-qt also has the same issue. This likely only manifest between FIrefox and libfm-qt.
Versions Affected: Firefox >=128.0 (last working version: 127.0.2) in Flatpak and Artix repo
DIsplay Protocol: X11 (Wayland works fine)
Desktop Environment: XMonad
Additionally the desktop environment should not be bearing except the use of pcmanfm-qt in the desktop. I cannot explain the issue on KDE5, it is possible dolphin and krusader has some specific workaround so the problem never manifested, I haven't checked it yet.
The version range is from Librewolf on Artix Linux but I have checked against FIrefox 128.0 back then so I am sure the issue is on Firefox. Also tested on sway and found no such issue.
There is also a thread from Ubuntu forum describing the exact problem of the reporter, having issue with Lubuntu 20.04.
I am also linking the thread from the reporter on the mozilla support forum here.
I am currently testing with the latest commit of libfm-qt, pcmanfm-qt, and lxqt-archiver. I also don't see any ticket regarding this on their issue tracker, I may send one their way if I can find where might be the issue.
Hi,
I think it may come from type application/x-qabstractitemmodeldatalist, which is unknown by Firefox, which stops at the first unknown type.
Here is a dropsite with dolphin (drag and drop working):
https://i.imgur.com/C2Dbfm6.png
And now with pcmanfm-qt (drag and drop not working):
https://i.imgur.com/Hd23PXe.png
Comment 7•1 year ago
|
||
What change caused this ? It worked fine for me a few months ago now it's making my app stopped working in lxqt environment.
| Comment hidden (metoo) |
| Comment hidden (metoo) |
| Assignee | ||
Comment 10•1 year ago
|
||
Please run Firefox on terminal with MOZ_LOG="WidgetDrag:5" env variable, reproduce the issue and attach the log here. Run for instance:
MOZ_LOG="WidgetDrag:5" firefox > log.txt 2>&1
and attach log.txt file.
Thanks.
Comment 11•1 year ago
|
||
Log for dragging a text file into the browser while visiting https://bpa.st
Comment 12•1 year ago
|
||
Log for dragging a jpg file into the browser while visiting https://imgur.com
| Assignee | ||
Comment 13•1 year ago
|
||
I can't reproduce it with Fedora 41 / KDE / X11 session.
Can you please re-test with latest nightly?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Testing_Mozilla_Nightly_binaries
Thanks.
Comment 14•1 year ago
|
||
Comment 15•1 year ago
|
||
Comment 16•1 year ago
|
||
I am on stock Lubuntu 24.04 (pcmanfm-qt 1.4.1).
| Assignee | ||
Comment 17•1 year ago
|
||
Looks like we failed to import x-moz-url
[Parent 57886: Main Thread]: D/WidgetDrag [D 2] nsDragService::TargetDataReceived(78132819af20) MIME text/x-moz-url mWaitingForDragDataRequests 0
[Parent 57886: Main Thread]: D/WidgetDrag [D 2] TargetDataReceived(): plain data, MIME text/x-moz-url len = 78
[Parent 57886: Main Thread]: D/WidgetDrag DragData() MIME text/x-moz-url is missing data
[Parent 57886: Main Thread]: D/WidgetDrag [D 1] text/x-moz-url received
[Parent 57886: Main Thread]: D/WidgetDrag DragData::GetURIsNum() 0
| Assignee | ||
Comment 18•1 year ago
|
||
John, which desktop is that?
Thanks.
Comment 21•1 year ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #20)
John, is that X11 or Wayland?
echo $XDG_SESSION_TYPE
x11
| Assignee | ||
Comment 22•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Comment 23•1 year ago
|
||
Comment 24•1 year ago
|
||
Comment 25•1 year ago
|
||
| bugherder | ||
| Assignee | ||
Comment 26•1 year ago
|
||
Please test latest nightly if it works for you.
Thanks.
Comment 27•1 year ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #26)
Please test latest nightly if it works for you.
Thanks.
It works! My life just became much easier. Thank you so much!
Comment 28•1 year ago
|
||
Martin, please be aware of the following crash report regarding Thunderbird under Debian/XFCE:
https://crash-stats.mozilla.org/report/index/be3c9233-2a82-43ae-903e-0aca90241207
STR:
- Open Thunderbird.
- Open www.google.com in Firefox
- Drag the "Google" image anywhere over Thunderbird.
Comment 29•1 year ago
|
||
I can also reproduce the TB crash on ubuntu24.04 GNOME,WebRender(Software).
https://crash-stats.mozilla.org/report/index/91504813-c775-4446-bab8-ff8bf0241207
| Assignee | ||
Comment 30•1 year ago
|
||
(In reply to Hartmut Welpmann [:welpy-cw] from comment #28)
Martin, please be aware of the following crash report regarding Thunderbird under Debian/XFCE:
https://crash-stats.mozilla.org/report/index/be3c9233-2a82-43ae-903e-0aca90241207
STR:
- Open Thunderbird.
- Open www.google.com in Firefox
- Drag the "Google" image anywhere over Thunderbird.
Is that Thunderbird Nightly based on latest nightly? If so please file a new bug for it. Will look at it.
Thanks.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Comment 31•1 year ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #30)
(In reply to Hartmut Welpmann [:welpy-cw] from comment #28)
Martin, please be aware of the following crash report regarding Thunderbird under Debian/XFCE:
https://crash-stats.mozilla.org/report/index/be3c9233-2a82-43ae-903e-0aca90241207
STR:
- Open Thunderbird.
- Open www.google.com in Firefox
- Drag the "Google" image anywhere over Thunderbird.
Is that Thunderbird Nightly based on latest nightly?
Yes.
If so please file a new bug for it. Will look at it.
Thanks.
Just noticed there is already one, see bug 1935861.
| Assignee | ||
Comment 32•1 year ago
|
||
Updated•1 year ago
|
| Assignee | ||
Comment 33•1 year ago
|
||
Comment on attachment 9442387 [details]
Bug 1913643 [Linux] Drag&Drop check received data for 134.0 r?emilio
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: On some systems we may receive empty D&D data. We need to throw them away and try another MIME type.
Without the patch D&D is broken on X11/KDE. - Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We only check if we have valid data and try another one.
The recent regression (Bug 1935861) is caused by forced MIME type check and it's not included in backported patch to beta. - String changes made/needed:
- Is Android affected?: Yes
Comment 34•1 year ago
|
||
| uplift | ||
| Assignee | ||
Comment 37•1 year ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #36)
Do we want this on ESR128 also?
Yes, I think so.
| Assignee | ||
Updated•1 year ago
|
Comment 38•1 year ago
|
||
Please create an uplift request for this and bug 1914742 in that case :-)
| Assignee | ||
Comment 39•1 year ago
|
||
Comment on attachment 9442387 [details]
Bug 1913643 [Linux] Drag&Drop check received data for 134.0 r?emilio
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: On some systems we may receive empty D&D data. We need to throw them away and try another MIME type.
Without the patch D&D is broken on X11/KDE. - User impact if declined:
- Fix Landed on Version: 134, 135
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We only check if we have valid data and try another one.
The recent regression (Bug 1935861) is caused by forced MIME type check and it's not included in backported patch to beta.
Comment 40•1 year ago
|
||
Comment on attachment 9442387 [details]
Bug 1913643 [Linux] Drag&Drop check received data for 134.0 r?emilio
Approved for 128.6esr.
Updated•1 year ago
|
Comment 41•1 year ago
|
||
| uplift | ||
Description
•