Bug 1913643 [Linux] Drag&Drop check received data r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D231376